add user attributes to configure additional properties for a specific user account
